--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -554,6 +554,9 @@ footer{
         width: 320px;
         height: 320px;
     }
+    .scroll-btn{
+        display: none;
+    }
 }
 
 /* ----- MEDIA QUERY == 900px / RESPONSIVE ----- */
