form mobile version

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -650,7 +650,7 @@ footer{
     .form-inputs{
         flex-direction: column;
     }
-    .input-field{
+    input{
         width: 100%;
     }
 }
