--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -378,6 +378,11 @@ h3{
     gap: 20px;
     flex-wrap: wrap;
 }
+.projectimage{
+    opacity: 100%;
+    max-height: 110%;
+    width: auto;
+}
 .project-box{
     position: relative;
     display: flex;
@@ -391,20 +396,32 @@ h3{
     box-shadow: 1px 8px 10px 2px var(--first-shadow-color);
     overflow: hidden;
 }
-.project-box>i{
+/* .project-box>i{
     font-size: 50px;
     color: var(--second-color);
     margin-bottom: 25px;
+} */
+
+.project-box h3{
+    position: absolute;
+    font-size: 28px;
+    color: var(--color-white);
+    bottom: 50%;
+    display: none;
 }
 .project-box label{
+    position: absolute;
     font-size: 15px;
-    color: #777;
+    color: var(--color-white);
+    bottom: 45%;
+    display: none;
 }
 .project-box::after, .contact-info::after{
     content: "";
     position: absolute;
     bottom: -100%;
     background: var(--second-color);
+    opacity: 70%;
     width: 100%;
     height: 100%;
     transition: .4s;
@@ -412,13 +429,17 @@ h3{
 }
 .project-box:hover.project-box::after,
 .contact-info:hover.contact-info::after{
-    bottom: 0;
+    bottom: 0%;
 }
 .project-box:hover.project-box i,
 .project-box:hover.project-box>h3,
 .project-box:hover.project-box>label{
     color: var(--color-white);
     z-index: 2;
+    display: block;
+}
+.projectimage:hover.projectimage::after{
+    opacity: 40%;
 }
 
 /* ----- CONTACT BOX ----- */
