--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -709,15 +709,17 @@ footer{
   }
 
   .video-container{
-    display: block;
     position: relative;
-    width: 100%;
-    height: 100%;
-    margin: 0 auto;
+    width: 80%;
+    margin: auto;
+    padding-bottom: 56.25%;
+    height: 0;
   }
 
   .video-container iframe{
-    margin: auto;
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
   }
