portfolio img size

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -719,6 +719,18 @@ footer{
     .portfolio-item {
       width: 100%;  /* Full width for smaller screens */
     }
+    .portfolio-item-small{
+        display: block;
+        margin-inline-end: auto;
+    }
+    
+    .portfolio-item-small img{
+        width: 100%;
+        max-width: 100%;
+        height: auto;
+        display: block;
+        margin: 0 auto;
+      }
   }
 
   .video-container{
