--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -713,27 +713,6 @@ footer{
     display: block;
     margin: 0 auto;
   }
-  
-  /* Media query for screens 600 pixels wide and below */
-  @media (max-width: 600px) {
-    .portfolio-item {
-      width: 100%;  /* Full width for smaller screens */
-    }
-    .portfolio-item-small{
-        display: block;
-        margin-inline-end: auto;
-    }
-    
-    .portfolio-item-small img{
-        width: 100%;
-        max-width: 100%;
-        height: auto;
-        display: block;
-        margin: 0 auto;
-      }
-      
-  }
-
   .video-container{
     position: relative;
     width: 80%;
@@ -752,7 +731,7 @@ footer{
 
   .embeded{
     position: relative;
-    width: 100;
+    width: 60%;
     margin: auto;
     padding-bottom: 40%;
     height: 0;
@@ -764,4 +743,39 @@ footer{
     left: 0;
     width: 100%;
     height: 100%;
+  }
+  
+  /* Media query for screens 600 pixels wide and below */
+  @media (max-width: 600px) {
+    .portfolio-item {
+      width: 100%;  /* Full width for smaller screens */
+    }
+    .portfolio-item-small{
+        display: block;
+        margin-inline-end: auto;
+    }
+    
+    .portfolio-item-small img{
+        width: 100%;
+        max-width: 100%;
+        height: auto;
+        display: block;
+        margin: 0 auto;
+      }
+      .embeded{
+        position: relative;
+        width: 100%;
+        margin: auto;
+        padding-bottom: 60%;
+        height: 0;
+      }
+    
+      .embeded iframe{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+      }
+      
   }
