--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -287,6 +287,7 @@ nav{
 /* ----- MAIN BOX ----- */
 .section{
     padding-block: 0em;
+    padding-bottom: 40px;
 }
 .row{
     display: flex;
@@ -298,7 +299,6 @@ nav{
     display: flex;
     width: 50%;
 }
-
 /* -- ## --- RESUABLE CSS -- ## -- */
 .top-header{
     text-align: center;
