--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -422,12 +422,23 @@ h3{
     bottom: 45%;
     display: none;
 }
-.project-box::after, .contact-info::after{
+.project-box::after{
     content: "";
     position: absolute;
     bottom: -100%;
     background: var(--second-color);
     opacity: 70%;
+    width: 100%;
+    height: 100%;
+    transition: .4s;
+    z-index: 1;
+}
+.contact-info::after{
+    content: "";
+    position: absolute;
+    bottom: -100%;
+    background: var(--color-white);
+    opacity: 100%;
     width: 100%;
     height: 100%;
     transition: .4s;
