--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,11 +8,12 @@
 
     --text-color-second: #222831;
     --text-color-third: #F05454;
+    --text-color-fourth: rgb(255, 255, 255);
 
-    --first-color: #F05454;
+    --first-color: #3d3d3d;
     --first-color-hover: #30475E;
 
-    --second-color: #F05454;
+    --second-color: #232323;
     --third-color:#222831;
     --first-shadow-color: rgba(0, 0, 0, 0.1);
 
@@ -73,7 +74,7 @@ html{
     margin-left: 10px;
 }
 .btn:hover{
-    background: var(--second-color);
+    background: var(--text-color-third);
     color: var(--first-color-hover);
 }
 
@@ -109,6 +110,7 @@ nav{
    letter-spacing: 1.5px;
 }
 .nav-name{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 35px;
     font-weight: 100;
     font-weight: 600;
@@ -347,12 +349,12 @@ h3{
     position: absolute;
     right: 20px;
     bottom: 20px;
-    background: var(--first-color);
+    background: #DDDDDD;
     color: var(--color-white);
     border-radius: 30px;
 }
 .about-btn button:hover{
-    background: var(--first-color-hover);
+    background: var(--text-color-third);
 }
 
 /* ----- ABOUT / SKILLS BOX ----- */
